# University

./: .gitignore  CMakeLists.txt  README.md  checkPESEL.hpp  checkPesel.cpp  main  main.cpp  student.cpp  student.hpp  students.txt  testing.cpp
